[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/reference/main_menu.png" type="Texture" id=1]
[ext_resource path="res://assets/reference/restart.png" type="Texture" id=2]
[ext_resource path="res://assets/reference/restart_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/reference/main_menu_pressed.png" type="Texture" id=4]
[ext_resource path="res://scenes/game_over_menu/GameOverMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/reference/game_over.png" type="Texture" id=6]

[node name="EndMenu" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="root" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="root"]
margin_left = 733.0
margin_top = 122.0
margin_right = 1186.0
margin_bottom = 958.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="root/VBoxContainer"]
margin_left = 33.0
margin_right = 419.0
margin_bottom = 370.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="TextureRect" parent="root/VBoxContainer"]
margin_top = 400.0
margin_right = 453.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 200 )

[node name="btnMenu" type="TextureButton" parent="root/VBoxContainer"]
margin_top = 630.0
margin_right = 453.0
margin_bottom = 718.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="btnRestart" type="TextureButton" parent="root/VBoxContainer"]
margin_top = 748.0
margin_right = 453.0
margin_bottom = 836.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_focused = ExtResource( 3 )
[connection signal="pressed" from="root/VBoxContainer/btnMenu" to="." method="_on_btnMenu_pressed"]
[connection signal="pressed" from="root/VBoxContainer/btnRestart" to="." method="_on_btnRestart_pressed"]
